# harkata

./: LICENSE  README.md  docker-compose.yml  harkata-dev.Dockerfile  harkata-prd.Dockerfile  pyproject.toml
memo/: requirements.md
src/harkata/: __init__.py  app.py  quiz.py
src/harkata/data/: example_quiz.json
src/harkata/models/: entities.py  responses.py
tests/: test_quiz.py
