[project]
name = "harkata"
version = "0.1.0"
description = "Harkata is a lightweight, stateless backend for real-time quizzes."
readme = "README.md"
authors = [
    { name = "Jani Sourander", email = "jani.sourander@kamk.fi" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "uvicorn>=0.34.2",
]

[project.scripts]
harkata = "harkata:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
